@@ -1,0 +1,1 @@
+create_makefile("-test-/bug-3662/bug")
