@@ -1,0 +1,10 @@
+require '-test-/bug-3662/bug'
+
+class Test_BUG_3662 < Test::Unit::TestCase
+  def test_funcall_notimplement
+    bug3662 = '[ruby-dev:41953]'
+    assert_raise(NotImplementedError, bug3662) {
+      Bug.funcall(:notimplement)
+    }
+  end
+end
